<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fixposition_bringup</name>
  <version>1.0.0</version>
  <description>Bringup for Fixposition driver</description>
  <maintainer email="taneli.korhonen@karelics.fi">Taneli Korhonen</maintainer>
  <license>Apache-2.0 license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>fixposition_driver_ros2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
